# comphot

./: CMakeLists.txt  HowTo.txt  Makephot  README.md  comphot.c  proclib.c  proclib.h
app/: CMakeLists.txt  app.cpp
cmake/: cpack_wix_patch.xml
cmake/modules/: boost.cmake  cfitsio.cmake  gd.cmake  m.cmake
lib/: CMakeLists.txt  comphot.c  comphot.h  fitting.h  proclib.c  proclib.h
src/: app.cpp  comphot.c  comphot.h  proclib.c  proclib.h
